kubernetes/apps/jellyfin/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      namespace: jellyfin
      labels:
        app: jellyfin
    spec:
      securityContext:
        fsGroup: 1000
      nodeSelector:
        topology.kubernetes.io/zone: Dagobah
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:10.11.4
          ports:
            - name: http
              containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: qsv-render-device
              mountPath: /dev/dri/renderD128
            - name: data
              mountPath: /data
      volumes:
        # GPU acceleration for Intel iGPU via QSV
        - name: qsv-render-device
          hostPath:
            path: /dev/dri/renderD128
            type: CharDevice
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: data
          persistentVolumeClaim:
            claimName: jellyfin-media
