kubernetes/apps/jellyfin/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-route
  namespace: jellyfin
spec:
  hostnames:
    - "jellyfin.local"
  parentRefs:
    - name: public-gateway
      namespace: kube-system
      kind: Gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /jellyfin
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: jellyfin
          port: 8096
